# piecewise

./: .devcontainer  Dockerfile  README.md  buildozer.spec  pyproject.toml
src/piecewise/: main.py
