[project]
name = "piecewise"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Donald Thompson", email = "witt3rd@witt3rd.com" }
]
dependencies = [
    "kivy>=2.3.0",
    "buildozer>=1.5.0",
    "setuptools>=72.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "cython>=3.0.11",
    "pip>=24.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/piecewise"]
